syntax = "proto3";
package messages;
option go_package = "./messages";

message Aws {
  enum UserType {
    INVALID = 0;
    BACKUP_WRITER = 1;
    BACKUP_READER = 2;
    BACKUP_CANARY = 3;
    BACKUP_ROOT = 4;
  }
  // Only use `Credential.key` to get temporal credentials and then discard it.
  // Example json temporal credentials:
  // { "Credentials": {
  //     "AccessKeyId": "XXX", "SecretAccessKey": "YYY", "SessionToken": "ZZZ", "Expiration": "<timestamp>"
  //   }
  // }
  // https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_request.html#api_getsessiontoken
  // https://pkg.go.dev/github.com/aws/aws-sdk-go-v2/service/sts
  message Credential {
    UserType type = 1;
    // Encrypted json content of .aws/credentials, example:
    // { "Version": 1, "AccessKeyId": "XXX", "SecretAccessKey": "YYY" }
    string key = 2;
  }
  string region = 1;
  repeated Credential creds = 2;
}

// Additional tools not directly related to backup/restores.
message Tool {
  enum ToolType {
    INVALID = 0;
    BTRFS_SNAP_DIFFS = 1;
    GARBAGE_COLLECTOR = 2;
    META_EXPLORE = 3;
  }
  ToolType type  = 1;
  string name    = 2;
  string wf_name = 3;
}

// links source -> dest -> restore referenced by name.
message Workflow {
  string  name    = 1;
  string  source  = 2;
  string  backup  = 3;
  string  restore = 4;
}

message Source {
  enum SourceType {
    INVALID  = 0;
    BTRFS  = 1;
  }
  message VolSnapPathPair {
    // The absolute path to the subvolume to backup.
    string vol_path = 1;
    // The absolute path of the directory where snapshots from `vol_path` are stored.
    string snap_path = 2;
  }
  message SnapHistory {
    // All snapshots from the subvolume that are less than `days_keep_all` old
    // are guaranteed to be kept.
    uint32 days_keep_all = 1;
    // Only one snapshot that is older than `days_keep_all` will be kept
    // for every `keep_one_period_days` window.
    uint32 keep_one_period_days = 2;
  }
  SourceType type = 1;
  string name = 2;
  repeated VolSnapPathPair paths = 3;
  SnapHistory history = 4;
}

message Backup {
  enum BackupType {
    INVALID = 0;
    AWS = 1;
    FILESYSTEM = 2;
    MEM_EPHEMERAL = 3;
  }

  message Partition {
    string fs_uuid = 1;
    string mount_root = 2;
    string metadata_dir = 3;
    string storage_dir = 4;
  }
  message RoundRobin {
    repeated Partition partitions = 2;
  }
  message Fs {
    repeated RoundRobin sinks = 1;
  }

  message DynamoDb {
    string metadata_table_name = 1;
  }
  message S3 {
    string storage_bucket_name = 1;
    string metadata_bucket_name = 2;
    uint64 chunk_len = 3;
  }
  message Aws {
    DynamoDb dynamo_db = 5;
    S3 s3 = 6;
  }

  BackupType   type = 1;
  string       name = 2;
  // You can only have oneof the following.
  Aws aws = 3;
  Fs  fs = 4;
  // Did not use oneof because it is a pain to use in golang.
}

message Restore {
  enum RestoreType {
    INVALID = 0;
    BTRFS  = 1;
  }
  RestoreType type = 1;
  string name = 2;
  // The absolute path of the directory where all restored snapshots should be stored.
  string root_restore_path = 3;
}

message Encryption {
  enum EncryptionType {
    INVALID = 0;
    NOOP = 1;
    AES = 2;
    AES_GZIP = 3;
  }
  EncryptionType type = 1;
  // The first key is used to encrypt new content.
  // Key length may be imposed by the encryption algorithm.
  // Keys are stored symmetrically encrypted into the configuration.
  // The encryption keys will be stored encrypted in the configuration and they will go to github.
  repeated string keys = 2;
}

message Config {
  repeated Workflow workflows = 1;
  repeated Tool tools = 2;

  repeated Source  sources  = 3;
  repeated Backup  backups  = 4;
  repeated Restore restores = 5;

  Encryption encryption = 6;
  Aws aws = 7;
}

